<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/parent" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <cn.lailaixiong.funnyprint.ImageEditor.photoeditor.widget.SlidingUpPanelLayout android:gravity="bottom" android:id="@id/sliding_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" app:umanoDragView="@id/dragView" app:umanoOverlay="true" app:umanoShadowHeight="4.0dip">
        <RelativeLayout android:gravity="center" android:background="#ff808080" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RelativeLayout android:id="@id/parent_image_rl" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true">
                <ImageView android:id="@id/photo_edit_iv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="center" android:adjustViewBounds="true" android:layout_centerInParent="true" android:contentDescription="@string/app_name" />
                <cn.lailaixiong.funnyprint.ImageEditor.photoeditorsdk.BrushDrawingView android:id="@id/drawing_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignTop="@id/photo_edit_iv" android:layout_alignBottom="@id/photo_edit_iv" android:layout_centerInParent="true" />
            </RelativeLayout>
            <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/done_drawing_tv" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/done" android:shadowColor="#ff000000" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="2.0" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" android:layout_alignParentEnd="true" />
            <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/erase_drawing_tv" android:padding="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/erase" android:shadowColor="#ff000000" android:shadowDx="1.0" android:shadowDy="1.0" android:shadowRadius="2.0" android:layout_marginStart="20.0dip" android:layout_marginEnd="20.0dip" android:layout_toStartOf="@id/done_drawing_tv" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/drawing_view_color_picker_recycler_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
            <View android:id="@id/top_shadow" android:background="@drawable/fading_shadow" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_alignParentTop="true" />
            <RelativeLayout android:id="@id/top_parent_rl" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignTop="@id/top_shadow" android:layout_alignBottom="@id/top_shadow">
                <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/close_tv" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ic_close" />
                <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/add_text_tv" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ic_text" android:layout_alignParentTop="true" android:layout_alignParentEnd="true" />
                <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/add_pencil_tv" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ic_draw" android:layout_toStartOf="@id/add_text_tv" />
                <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/add_image_tv" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ic_images" android:layout_toStartOf="@id/add_pencil_tv" />
                <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/add_qrcode_tv" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ic_qrcode" android:layout_toStartOf="@id/add_image_tv" />
                <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/add_barcode_tv" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ic_barcode" android:layout_toStartOf="@id/add_qrcode_tv" />
                <TextView android:textSize="20.0sp" android:textColor="#ffffffff" android:id="@id/add_camera_tv" android:padding="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ic_camera" android:layout_toStartOf="@id/add_barcode_tv" />
            </RelativeLayout>
            <View android:id="@id/bottom_shadow" android:background="@drawable/below_shadow" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_alignParentBottom="true" />
            <RelativeLayout android:id="@id/bottom_parent_rl" android:paddingLeft="26.0dip" android:paddingRight="26.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignTop="@id/bottom_shadow" android:layout_alignBottom="@id/bottom_shadow">
                <TextView android:textSize="30.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/save_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ic_save" android:layout_centerVertical="true" android:layout_alignEnd="@id/save_text_tv" android:layout_alignParentStart="true" />
                <TextView android:textSize="11.0sp" android:textColor="#ffffffff" android:id="@id/save_text_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/save" android:layout_below="@id/save_tv" android:layout_centerVertical="true" android:layout_alignParentStart="true" />
                <TextView android:textSize="30.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/clear_all_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/ic_clear_all" android:layout_centerVertical="true" android:layout_marginStart="20.0dip" android:layout_toEndOf="@id/save_tv" android:layout_alignEnd="@id/clear_all_text_tv" />
                <TextView android:textSize="11.0sp" android:textColor="#ffffffff" android:id="@id/clear_all_text_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/clear_all" android:layout_below="@id/clear_all_tv" android:layout_centerVertical="true" android:layout_marginStart="20.0dip" android:layout_toEndOf="@id/save_tv" />
                <TextView android:textSize="30.0sp" android:textColor="#ffffffff" android:id="@id/go_to_next_screen_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ic_continue" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/delete_rl" android:padding="25.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
                <TextView android:textSize="25.0sp" android:textColor="#ffffffff" android:id="@id/delete_tv" android:background="@drawable/rounded_border_text_view" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ic_delete" android:layout_centerInParent="true" />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout android:id="@id/image_emoji_bottom_sheet" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <cn.lailaixiong.funnyprint.ImageEditor.photoeditor.widget.RealtimeBlurView android:layout_width="fill_parent" android:layout_height="fill_parent" app:realtimeBlurRadius="10.0dip" app:realtimeOverlayColor="#33ffffff" />
            <com.viewpagerindicator.CirclePageIndicator android:layout_gravity="center_horizontal" android:id="@id/image_emoji_indicator" android:padding="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" />
            <androidx.viewpager.widget.ViewPager android:id="@id/image_emoji_view_pager" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/image_emoji_indicator" />
        </RelativeLayout>
    </cn.lailaixiong.funnyprint.ImageEditor.photoeditor.widget.SlidingUpPanelLayout>
</RelativeLayout>
