<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:tag="layout/dialog_text_input_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_white_color_round_10_up" android:paddingLeft="@dimen/pager_horizontal_margin_16" android:paddingRight="@dimen/pager_horizontal_margin_16" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginHorizontal="10.0dip" android:paddingHorizontal="@dimen/pager_horizontal_margin_16">
        <TextView android:textSize="@dimen/text_size_larger" android:textStyle="bold" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="20.0dip" android:text="@string/content" />
        <LinearLayout android:orientation="horizontal" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="@dimen/text_size_big" android:textColor="@color/color_333" android:textColorHint="@color/color_A9AEB4" android:id="@id/edit" android:tag="binding_1" android:background="@drawable/bg_f5f6f9_color_round_4" android:paddingLeft="12.0dip" android:paddingTop="10.0dip" android:paddingRight="12.0dip" android:paddingBottom="10.0dip" android:scrollbars="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:maxHeight="100.0dip" android:hint="@string/edit_content" android:layout_weight="1.0" android:paddingHorizontal="12.0dip" android:paddingVertical="10.0dip" />
            <TextView android:textSize="@dimen/text_size_larger" android:textColor="@color/color_3F74FF" android:layout_gravity="bottom" android:id="@id/text_finish" android:tag="binding_2" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12.0dip" android:text="@string/done" android:paddingVertical="8.0dip" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
