<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/dialog_modify_date_0" android:background="@drawable/bg_float_menu_round" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/tab_layout" android:layout_width="wrap_content" android:layout_height="30.0dip" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
        <TextView android:textSize="14.0sp" android:textColor="@color/color_red" android:gravity="center" android:id="@id/date_title" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/date" android:paddingHorizontal="15.0dip" />
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:gravity="center" android:id="@id/time_title" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/format" android:paddingHorizontal="15.0dip" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/date_content" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/tab_layout">
        <TextView android:textSize="14.0sp" android:textColor="@color/black" android:id="@id/show_time_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/enable_date" android:layout_marginStart="10.0dip" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <androidx.appcompat.widget.SwitchCompat android:id="@id/time_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/switch_thumb_small" android:layout_marginEnd="10.0dip" app:layout_constraintBottom_toBottomOf="@id/show_time_text" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="@id/show_time_text" app:track="@drawable/switch_track_small_selector" />
        <com.github.gzuliyujiang.wheelpicker.widget.DateWheelLayout android:id="@id/date_wheel" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:layout_marginHorizontal="20.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/show_time_text" />
        <TextView android:textSize="16.0sp" android:textColor="@color/black" android:id="@id/real_time" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/real_time_enabled" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/show_time_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/formatted_content" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="0.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toBottomOf="@id/tab_layout">
        <com.github.gzuliyujiang.wheelpicker.widget.OptionWheelLayout android:id="@id/formatted_wheel" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:layout_marginHorizontal="20.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
