<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/fragment_material_style_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:paddingHorizontal="18.0dip">
        <TextView android:textSize="@dimen/text_size_big" android:textColor="@color/color_000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uniform_scaling" android:layout_centerVertical="true" />
        <androidx.appcompat.widget.SwitchCompat android:id="@id/scale_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/switch_thumb" android:layout_centerVertical="true" android:layout_alignParentEnd="true" app:track="@drawable/switch_track_selector" />
    </RelativeLayout>
    <RelativeLayout android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:paddingHorizontal="18.0dip">
        <TextView android:textSize="@dimen/text_size_big" android:textColor="@color/color_000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/invert" android:layout_centerVertical="true" />
        <androidx.appcompat.widget.SwitchCompat android:id="@id/reverse_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:thumb="@drawable/switch_thumb" android:layout_centerVertical="true" android:layout_alignParentEnd="true" app:track="@drawable/switch_track_selector" />
    </RelativeLayout>
    <RelativeLayout android:paddingLeft="18.0dip" android:paddingRight="18.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:paddingHorizontal="18.0dip">
        <TextView android:textSize="@dimen/text_size_big" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/color" android:layout_centerVertical="true" />
        <LinearLayout android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true">
            <CheckBox android:id="@id/color_black" android:background="@drawable/color_style_black_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/MyCheckBoxStyle" />
            <CheckBox android:id="@id/color_red" android:background="@drawable/color_style_red_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="24.0dip" style="@style/MyCheckBoxStyle" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
